--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,9 @@
 ---
+import Base from "../layouts/Base.astro";
+import Columns from "../layouts/Columns.astro";
+import Card from "../components/Card.astro"
+import "../styles/reset.css"
+import "../styles/global.css"
 
 ---
 
@@ -8,9 +13,23 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+
+		 <!-- Cabin font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
+
+    <!-- Lato font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
+
+
+
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+<Base>
+		<Card title="Creative Ideas" variant="primary"/>
 	</body>
 </html>
