--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -13,15 +13,26 @@ import "../styles/global.css"
 
 <style>
   article {
-    background: #fff;
-    padding: 1rem;
+    padding: 2.25rem 1.4375rem;
     border-radius: 1.25rem;
+
+  }
+
+  a{
+    text-decoration: none;
+    color: var(--color-text);
+        font-family: "Lato", sans-serif;
+        font-size: 1.125rem;
+        font-style: normal;
+font-weight: 600;
+line-height: 1.8rem;
 
   }
 
   [data-variant="original"] {
     background: #fff;
     color: #000;
+    border: 1px solid #EAEAEA;
   }
 
   [data-variant="primary"] {
