--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,16 +2,17 @@
 import Base from "../layouts/Base.astro";
 import Columns from "../components/Columns.astro";
 import Card from "../components/Card.astro"
+
 import "../styles/global.css"
 ---
 
 <Base>
 <section>
      <Columns cols="4">
-    <Card variant="primary"  />
-    <Card  variant="primary"/>
-    <Card variant="primary"/>
-    <Card variant="primary"/>
+    <Card  title="Creative Ideas" variant="original" />
+    <Card  title="Best Features"variant="original"/>
+    <Card title="Experience"variant="original"/>
+    <Card title="Easy Solutions"variant="original"/>
     </Columns>
 </section>
 
