--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,69 +1,120 @@
 ---
+import "../styles/global.css";
 import Base from "../layouts/Base.astro";
 import Columns from "../components/Columns.astro";
 import Card from "../components/Card.astro";
 import HeadingPill from "../components/HeadingPill.astro";
 import Button from "../components/Button.astro";
-import "../styles/global.css";
 import Titles from "../components/Titles.astro";
+import Checkmark from "../components/Checkmark.astro";
+import Numbers from "../components/Numbers.astro";
 ---
 
 <Base>
-  <section>
-    <HeadingPill title="Our vision" variant="green" />
-    <Titles title="Turn your ideas into reality." text="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps." />
+  <section class="firstflex">
+    <div>
+      <Columns cols="3">
+        <HeadingPill variant="green" title="Our Vision" />
+      </Columns>
+      <Titles title="Turn your ideas into reality." tekst="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps." />
+      <Checkmark />
+    </div>
+    <div>
+      <figure>
+        <img src="./images/imgpattern.jpg" alt="" class="h2img" />
+      </figure>
+    </div>
   </section>
+  <Numbers />
+
   <section class="full">
     <div>
       <Columns cols="3">
         <HeadingPill title="Growing with our Clients" variant="yellow" />
       </Columns>
-      <Columns cols="2">
-        <div class="sec-button">
-          <Titles title="Our core values & principles" text="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps." />
-          <Button title="Get in touch" />
-        </div>
-      </Columns>
+      <div class="secbutton">
+        <Titles title="Our core values & principles" tekst="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps." />
+        <Button title="Get in touch" />
+      </div>
     </div>
-
     <Columns cols="4">
       <Card title="Creative Ideas" variant="original" />
       <Card title="Best Features" variant="original" />
       <Card title="Experience" variant="original" />
       <Card title="Easy Solutions" variant="original" />
     </Columns>
-
-    <style>
-      section {
-        display: grid;
-        grid:
-          auto /
-          [full-start] 1fr
-          [content] minmax(0, var(--content-width))
-          1fr [full-end];
-        gap: 6rem 4rem;
-
-        padding: 6.25rem;
-
-        > * {
-          grid-column: content;
-        }
-
-        .full {
-          grid-column: full;
-        }
-      }
-
-      .full {
-        background: #f5f5f5;
-      }
-
-      .sec-button {
-        display: flex;
-        width: 74.875rem;
-        align-items: flex-end;
-        gap: 22rem;
-      }
-    </style>
   </section>
 </Base>
+
+<style>
+  .firstflex {
+    display: flex;
+    flex-flow: row;
+    padding: 3rem;
+  }
+  .secbutton {
+    display: flex;
+
+    width: 74.875rem;
+    align-items: flex-end;
+    gap: 22rem;
+  }
+  section {
+    padding: 6.25rem;
+    display: grid;
+    grid:
+      auto /
+      [full-start] 1fr
+      [content] minmax(0, var(--content-width))
+      1fr [full-end];
+    gap: 6rem 4rem;
+
+    > * {
+      grid-column: content;
+    }
+
+    .full {
+      grid-column: full;
+    }
+  }
+
+  .full {
+    background: #f5f5f5;
+  }
+
+  figure {
+    width: 400px;
+    height: auto;
+    position: relative;
+
+    &::before {
+      --square-count: 10;
+      z-index: -1;
+      content: "";
+      position: absolute;
+      inset: -50px -50px auto auto;
+      inline-size: calc(var(--square-count) * 1.34rem - 0.67rem);
+      aspect-ratio: 1;
+      background: linear-gradient(135deg, #be965d, #976f40, #c99b61, #f0be7b, #ffcb85, #eebc79, #c0935b, #976f40) 0 0 / 100% 100%;
+      mask:
+        var(--square-pattern) 0 0 / 1.34rem 1.34rem,
+        var(--square-pattern) 0.67rem 0.67rem / 1.34rem 1.34rem;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      right: -1rem;
+      top: -1rem;
+      background: green;
+      width: 150px;
+      height: 100px;
+      border-radius: 10px;
+      z-index: -1;
+    }
+  }
+
+  .h2img {
+    border-radius: 1.2rem;
+  }
+</style>
