--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -15,6 +15,7 @@ import "../styles/global.css";
   article {
     padding: 2.25rem 1.4375rem;
     border-radius: 1.25rem;
+    font-weight: 600;
   }
 
   a {
