--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,6 +1,8 @@
 ---
 import "../styles/global.css";
 import "../styles/reset.css";
+import Footer from "../components/Footer.astro";
+import Nav from "../components/Nav.astro";
 ---
 
 <html lang="en">
@@ -10,8 +12,7 @@ import "../styles/reset.css";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
 
-
-		 <!-- Cabin font  -->
+    <!-- Cabin font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
@@ -25,22 +26,16 @@ import "../styles/reset.css";
   </head>
   <body>
     <header>
-
+      <Nav />
     </header>
     <main>
       <slot />
     </main>
-<footer></footer>
+    <Footer />
   </body>
 </html>
 
 <style>
-
-    header,
-  footer {
-    height: 80px;
-    background: #000;
-  }
   main {
     display: grid;
     grid:
