--- a/src/pages/service-single.astro
+++ b/src/pages/service-single.astro
@@ -9,8 +9,8 @@ import HeadingPill from "../components/HeadingPill.astro";
 import Button from "../components/Button.astro";
 import Titles from "../components/Titles.astro";
 import Checkmark from "../components/Checkmark.astro";
-import Numbers from "../components/Numbers.astro";
-import Video from "../components/Video.astro";
+import Brands from "../components/Brands.astro";
+import Video2 from "../components/Video2.astro";
 import { Icon } from "astro-icon/components";
 import ScrollingContainer from "../components/ScrollingContainer.astro";
 ---
@@ -33,13 +33,30 @@ import ScrollingContainer from "../components/ScrollingContainer.astro";
     </div>
     <ScrollingContainer />
   </section>
-  <section>
+
+  <section class="firstflex">
+    <div>
+      <figure>
+        <img src="./images/imgpattern2.jpg" alt="" class="h2img" />
+      </figure>
+    </div>
+    <div class="space">
+      <Columns cols="2">
+        <HeadingPill variant="yellow" title="we'll work with you" />
+      </Columns>
+      <Titles title="What To Expect" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />
+      <Checkmark />
+    </div>
+  </section>
+  <Brands />
+
+  <section class="full" id="bg-bl">
     <div class="centered">
       <HeadingPill title="Our history" variant="green" />
 
-      <Titles title="Better Website Means A User Experience" text="Ippsum is the result of synergy between our teams and our customers. Our company culture is focused on excellent productivity, customer satisfaction, respect for team and individual achievements." />
+      <Titles variant="white" title="Strategy for Every Stage in the Client's Journey" />
     </div>
-    <Video />
+    <Video2 />
   </section>
   <section class="full">
     <div>
@@ -97,6 +114,10 @@ import ScrollingContainer from "../components/ScrollingContainer.astro";
     background: #f5f5f5;
   }
 
+  #bg-bl {
+    background: #181818;
+  }
+
   figure {
     width: 400px;
     height: auto;
@@ -145,6 +166,13 @@ import ScrollingContainer from "../components/ScrollingContainer.astro";
     display: flex;
     align-items: flex-start;
     gap: 1.625rem;
+  }
+
+  .space {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
   }
 
   [data-icon="coloredchart"] {
