--- a/src/pages/service-single.astro
+++ b/src/pages/service-single.astro
@@ -9,6 +9,7 @@ import HeadingPill from "../components/HeadingPill.astro";
 import Button from "../components/Button.astro";
 import Titles from "../components/Titles.astro";
 import Checkmark from "../components/Checkmark.astro";
+import ContactSection from "../components/ContactSection.astro";
 import Brands from "../components/Brands.astro";
 import Video2 from "../components/Video2.astro";
 import { Icon } from "astro-icon/components";
@@ -58,148 +59,146 @@ import ScrollingContainer from "../components/ScrollingContainer.astro";
     </div>
     <Video2 />
   </section>
-  <section class="full">
-    <div>
-      <Columns cols="6">
-        <HeadingPill title="our team" variant="yellow" />
-      </Columns>
-      <div class="secbutton">
-        <Titles title="We champion the bold to achieve the extraordinary" text="Ippsum is the result of synergy between our teams and our customers. Our company culture is focused on excellent productivity, customer satisfaction, respect for team." />
-      </div>
-    </div>
-    <Columns cols="3">
-      <TeamCard img="../images/sarah.jpg" position=" CEO at Company" variant="yellow" name="Sarah Jasmine" text="Leverage agile frameworks to provide a robust synopsis for high level overviews." />
-      <TeamCard img="../images/john.jpg" position="Manager" variant="black" name="John Carter" text="Leverage agile frameworks to provide a robust synopsis for high level overviews." />
-      <TeamCard img="../images/daisy.jpg" position="CEO at Company" variant="black" name="Daisy Stella" text="Leverage agile frameworks to provide a robust synopsis for high level overviews." />
-    </Columns>
-  </section>
   <section>
-    <img src="../images/ctabox.jpg" alt="temporary" />
+    <Columns cols="2">
+      <div>
+        <Columns cols="3">
+          <HeadingPill title="Proccess" variant="yellow" />
+        </Columns>
+        <Titles title="Contact Us. It’s Easy." text="Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative." />
+        <ContactSection />
+      </div>
+
+      <img style="width:400px" src="../images/temporary3.jpg" alt="img with pattern" />
+    </Columns>
+    <section>
+      <img class="accordion" src="../images/accordion.jpg" alt="temporary" />
+    </section>
   </section>
-</Base>
 
-<style>
-  .firstflex {
-    display: flex;
-    flex-flow: row;
-    padding: 3rem;
-  }
-  .secbutton {
-    display: flex;
+  <style>
+    .firstflex {
+      display: flex;
+      flex-flow: row;
+      padding: 3rem;
+    }
+    .secbutton {
+      display: flex;
 
-    width: 74.875rem;
-    align-items: flex-end;
-    gap: 22rem;
-  }
-  section {
-    padding: 6.25rem;
-    display: grid;
-    grid:
-      auto /
-      [full-start] 1fr
-      [content] minmax(0, var(--content-width))
-      1fr [full-end];
-    gap: 6rem 4rem;
+      width: 74.875rem;
+      align-items: flex-end;
+      gap: 22rem;
+    }
+    section {
+      padding: 6.25rem;
+      display: grid;
+      grid:
+        auto /
+        [full-start] 1fr
+        [content] minmax(0, var(--content-width))
+        1fr [full-end];
+      gap: 6rem 4rem;
 
-    > * {
-      grid-column: content;
+      > * {
+        grid-column: content;
+      }
+
+      .full {
+        grid-column: full;
+      }
     }
 
     .full {
-      grid-column: full;
-    }
-  }
-
-  .full {
-    background: #f5f5f5;
-  }
-
-  #bg-bl {
-    background: #181818;
-  }
-
-  figure {
-    width: 400px;
-    height: auto;
-    position: relative;
-
-    &::before {
-      --square-count: 10;
-      z-index: -1;
-      content: "";
-      position: absolute;
-      inset: -50px -50px auto auto;
-      inline-size: calc(var(--square-count) * 1.34rem - 0.67rem);
-      aspect-ratio: 1;
-      background: linear-gradient(135deg, #be965d, #976f40, #c99b61, #f0be7b, #ffcb85, #eebc79, #c0935b, #976f40) 0 0 / 100% 100%;
-      mask:
-        var(--square-pattern) 0 0 / 1.34rem 1.34rem,
-        var(--square-pattern) 0.67rem 0.67rem / 1.34rem 1.34rem;
+      background: #f5f5f5;
     }
 
-    &::after {
-      content: "";
-      position: absolute;
-      right: -1rem;
-      top: -1rem;
-      background: green;
-      width: 150px;
-      height: 100px;
-      border-radius: 10px;
-      z-index: -1;
+    #bg-bl {
+      background: #181818;
     }
-  }
 
-  .h2img {
-    border-radius: 1.2rem;
-  }
+    figure {
+      width: 400px;
+      height: auto;
+      position: relative;
 
-  .centered {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.6875rem;
-    text-align: center;
-  }
+      &::before {
+        --square-count: 10;
+        z-index: -1;
+        content: "";
+        position: absolute;
+        inset: -50px -50px auto auto;
+        inline-size: calc(var(--square-count) * 1.34rem - 0.67rem);
+        aspect-ratio: 1;
+        background: linear-gradient(135deg, #be965d, #976f40, #c99b61, #f0be7b, #ffcb85, #eebc79, #c0935b, #976f40) 0 0 / 100% 100%;
+        mask:
+          var(--square-pattern) 0 0 / 1.34rem 1.34rem,
+          var(--square-pattern) 0.67rem 0.67rem / 1.34rem 1.34rem;
+      }
 
-  .arrow-container {
-    display: flex;
-    align-items: flex-start;
-    gap: 1.625rem;
-  }
+      &::after {
+        content: "";
+        position: absolute;
+        right: -1rem;
+        top: -1rem;
+        background: green;
+        width: 150px;
+        height: 100px;
+        border-radius: 10px;
+        z-index: -1;
+      }
+    }
 
-  .space {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1.5rem;
-  }
+    .h2img {
+      border-radius: 1.2rem;
+    }
 
-  [data-icon="coloredchart"] {
-    width: 6.58675rem;
-    height: 4.44144rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1.375rem;
-    margin-bottom: 1.375rem;
-  }
-  [data-icon="arrow-round-bl"] {
-    width: 4.34594rem;
-    height: 4.34594rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1.375rem;
-    margin-bottom: 1.375rem;
-  }
-  [data-icon="arrow-round-yl"] {
-    width: 4.34594rem;
-    height: 4.34594rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1.375rem;
-    margin-bottom: 1.375rem;
-  }
-</style>
+    .centered {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.6875rem;
+      text-align: center;
+    }
+
+    .arrow-container {
+      display: flex;
+      align-items: flex-start;
+      gap: 1.625rem;
+    }
+
+    .space {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1.5rem;
+    }
+
+    [data-icon="coloredchart"] {
+      width: 6.58675rem;
+      height: 4.44144rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1.375rem;
+      margin-bottom: 1.375rem;
+    }
+    [data-icon="arrow-round-bl"] {
+      width: 4.34594rem;
+      height: 4.34594rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1.375rem;
+      margin-bottom: 1.375rem;
+    }
+    [data-icon="arrow-round-yl"] {
+      width: 4.34594rem;
+      height: 4.34594rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1.375rem;
+      margin-bottom: 1.375rem;
+    }
+  </style>
+</Base>
