--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -19,10 +19,10 @@ import Video from "../components/Video.astro";
   <section>
     <div>
       <Columns cols="3">
-        <HeadingPill title="Growing with our Clients" variant="yellow" />
+        <HeadingPill title="" variant="yellow" />
       </Columns>
       <div class="secbutton">
-        <Titles title="Our core values & principles" text="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps." />
+        <Titles title="Meet Our Great Team" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad minim veniam, quis nostrud exercitation." />
         <Button title="Get in touch" />
       </div>
     </div>
@@ -55,7 +55,7 @@ import Video from "../components/Video.astro";
 
     width: 74.875rem;
     align-items: flex-end;
-    gap: 22rem;
+    gap: 7rem;
   }
   section {
     padding: 6.25rem;
