små rettelser - panikker

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,35 +1,8 @@
 ---
 import Base from "../layouts/Base.astro";
-import Columns from "../layouts/Columns.astro";
-import Card from "../components/Card.astro"
-import "../styles/reset.css"
-import "../styles/global.css"
 
+import "../styles/reset.css";
+import "../styles/global.css";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-
-		 <!-- Cabin font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
-
-    <!-- Lato font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
-
-
-
-		<title>Astro</title>
-	</head>
-	<body>
-<Base>
-		<Card title="Creative Ideas" variant="primary"/>
-	</body>
-</html>
+<Base />
