--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -23,7 +23,7 @@ import Video from "../components/Video.astro";
       </Columns>
       <div class="secbutton">
         <Titles title="Meet Our Great Team" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad minim veniam, quis nostrud exercitation." />
-        <Button title="Meet our team" />
+        <Button title="Join our team" />
       </div>
     </div>
 
