--- a/src/components/HeroImage.astro
+++ b/src/components/HeroImage.astro
@@ -1,5 +1,36 @@
 ---
+import HeadingPill from "../components/HeadingPill.astro";
+import Titles from "../components/Titles.astro";
 const { img } = Astro.props;
 ---
 
-<img class="full" src={img} alt="Hero Image" />
+<div class="containerabout">
+  <img src={img} alt="heroimage" class="imghero" />
+</div>
+
+<style>
+  .containerabout {
+    display: grid;
+    place-items: center;
+  }
+  .imghero {
+    width: 120%;
+    height: 100%;
+  }
+  .imghero,
+  .services {
+    grid-area: 1 / 1;
+  }
+  .services {
+    padding: 3rem 3.75rem 3.625rem 3.75rem;
+    border-radius: 1.8125rem;
+    background: rgba(255, 255, 255, 0.85);
+
+    backdrop-filter: blur(5.5px);
+    display: inline-flex;
+
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.625rem;
+  }
+</style>
