--- a/src/pages/case-study-single.astro
+++ b/src/pages/case-study-single.astro
@@ -2,21 +2,19 @@
 import "../styles/global.css";
 import Base from "../layouts/Base.astro";
 import Columns from "../components/Columns.astro";
+import HeroImage from "../components/HeroImage.astro";
+import Card from "../components/Card.astro";
 import TeamCard from "../components/TeamCard.astro";
 import HeadingPill from "../components/HeadingPill.astro";
 import Button from "../components/Button.astro";
 import Titles from "../components/Titles.astro";
+import Checkmark from "../components/Checkmark.astro";
+import Numbers from "../components/Numbers.astro";
+import Video from "../components/Video.astro";
 ---
 
 <Base>
-  <div class="containerabout">
-    <img src="../images/team-hero.jpg" alt="heroimage" class="imghero" />
-
-    <div class="services">
-      <HeadingPill variant="yellow" title="team" />
-      <Titles title="The Consultors" tekst="" />
-    </div>
-  </div>
+  <HeroImage img="../images/team-hero.jpg" />
 
   <section>
     <div>
@@ -124,30 +122,5 @@ import Titles from "../components/Titles.astro";
     align-items: center;
     gap: 0.6875rem;
     text-align: center;
-  }
-
-  .containerabout {
-    display: grid;
-    place-items: center;
-  }
-  .imghero {
-    width: 120%;
-    height: 100%;
-  }
-  .imghero,
-  .services {
-    grid-area: 1 / 1;
-  }
-  .services {
-    padding: 3rem 3.75rem 3.625rem 3.75rem;
-    border-radius: 1.8125rem;
-    background: rgba(255, 255, 255, 0.85);
-
-    backdrop-filter: blur(5.5px);
-    display: inline-flex;
-
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.625rem;
   }
 </style>
