løst hero image issue - mangler sidste side

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@ import "../styles/global.css";
   <a href="/about">About</a>
   <a href="/service-single">Service Single</a>
   <a href="/team">Team</a>
-  <a href="/case-study-single">Case Study Single</a>
+  <a href="#">Case Study Single</a>
 </nav>
 
 <style>
