--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ import Video from "../components/Video.astro";
 ---
 
 <Base>
-  <div class="containerabout">
+  <div class="containerabout full">
     <img src="../images/about-hero.jpg" alt="heroimage" class="imghero" />
 
     <div class="services">
