--- a/src/pages/service-single.astro
+++ b/src/pages/service-single.astro
@@ -13,7 +13,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <Base>
-  <div class="containerabout">
+  <div class="containerabout full">
     <img src="../images/service-hero.jpg" alt="heroimage" class="imghero" />
 
     <div class="services">
