--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,7 +33,7 @@ import Video from "../components/Video.astro";
     </div>
     <div>
       <figure>
-        <img src="./images/imgpattern.jpg" alt="" class="h2img" />
+        <img src="../images/imgpattern.jpg" alt="" class="h2img" />
       </figure>
     </div>
   </section>
