--- a/src/pages/service-single.astro
+++ b/src/pages/service-single.astro
@@ -41,7 +41,7 @@ import { Icon } from "astro-icon/components";
   <section class="firstflex">
     <div>
       <figure>
-        <img src="./images/imgpattern2.jpg" alt="" class="h2img" />
+        <img src="../images/imgpattern2.jpg" alt="" class="h2img" />
       </figure>
     </div>
     <div class="space">
